--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/mongodb-adapter": "^3.10.0",
     "@tanstack/react-query": "^5.84.2",
     "cohere-ai": "^7.18.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "next": "15.4.2",
